# have-agent

./: .gitignore  DECISIONS.md  README.md  have-agent-substrate-v0.md  pyproject.toml
examples/: brelje_replication.yaml  quickstart.yaml
refs/: README.md  brelje_fig_digitized.csv
refs/tools/: digitize_brelje_fig5.py
src/have_agent/: __init__.py  checks.py  cli.py  control.py  db.py  decompose.py  executor.py  hangar_executor.py  ids.py  plugins.py  report.py  scheduler.py  substrate.py  triage.py  worker.py
src/have_agent/migrations/: 0001_substrate.sql  0002_event_append_only.sql
tests/: conftest.py  plugin_fixture.py  test_checks.py  test_claim.py  test_cli.py  test_control.py  test_decompose.py  test_e2e.py  test_hangar_executor.py  test_ids.py  test_migration.py  test_plugins.py  test_scheduler.py  test_study_transitions.py  test_transitions.py  test_triage.py  test_worker.py
